added data folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,10 @@
-Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@Viktorre 
-Viktorre
-/
-NN_classifier
-Public
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-Settings
-NN_classifier/.gitignore
-@Viktorre
-Viktorre added .gitignore
-Latest commit f257a69 29 days ago
- History
- 1 contributor
-136 lines (110 sloc)  1.81 KB
-   
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# all input data in folder
+data/
 
 # log files ml
 logs/
